--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.6",
     "bootstrap-vue": "^0.22.1",
+    "mongoose": "^4.11.7",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1"
   },
