--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.6",
     "bootstrap-vue": "^0.22.1",
+    "firebase": "^4.3.0",
     "mongoose": "^4.11.7",
-    "vue": "^2.3.3",
-    "vue-router": "^2.3.1"
+    "vue": "^2.4.2",
+    "vue-router": "^2.3.1",
+    "vuefire": "^1.4.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
