configuring heroku build and deploy

--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e"
   },
+  "postinstall": "npm run build",
+  "start": "node server.js",
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.6",
     "bootstrap-vue": "^0.22.1",
     "firebase": "^4.3.0",
+    "http-server": "^0.10.0",
     "mongoose": "^4.11.7",
+    "path": "^0.12.7",
+    "serve-static": "^1.12.4",
     "vue": "^2.4.2",
     "vue-router": "^2.3.1",
     "vuefire": "^1.4.3",
@@ -41,7 +46,7 @@
     "css-loader": "^0.28.0",
     "cssnano": "^3.10.0",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
+    "express": "^4.15.4",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.1.3",
