--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
-    "start": "node build/dev-server.js",
     "build": "node build/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
-    "test": "npm run unit && npm run e2e"
+    "test": "npm run unit && npm run e2e",
+    "postinstall": "npm run build",
+    "start": "node server.js"
   },
-  "postinstall": "npm run build",
-  "start": "node server.js",
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.6",
     "bootstrap-vue": "^0.22.1",
