--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "npm run unit && npm run e2e"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "bootstrap": "^4.0.0-alpha.6",
     "bootstrap-vue": "^0.22.1",
     "firebase": "^4.3.0",
