--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "vue": "^2.4.2",
     "vue-router": "^2.3.1",
     "vuefire": "^1.4.3",
-    "webcamjs": "^1.0.22"
+    "webcamjs": "^1.0.22",
+    "chalk": "^2.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -38,7 +39,6 @@
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "chai": "^3.5.0",
-    "chalk": "^2.0.1",
     "chromedriver": "^2.27.2",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
