--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "vue-router": "^2.3.1",
     "vuefire": "^1.4.3",
     "webcamjs": "^1.0.22",
-    "chalk": "^2.0.1"
+    "chalk": "^2.0.1",
+    "shelljs": "^0.7.6"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -73,7 +74,6 @@
     "rimraf": "^2.6.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
     "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.18.2",
