--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "serve-static": "^1.12.4",
     "shelljs": "^0.7.6",
     "shortid": "^2.2.8",
+    "toastr": "^2.1.2",
     "vue": "^2.4.2",
     "vue-router": "^2.3.1",
     "vuefire": "^1.4.3",
