--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "name": "hindu-app",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "Breno Henrique <brenosc2@hotmail.com>",
