--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "app",
-  "short_name": "app",
+  "name": "Hindu",
+  "short_name": "Hindu",
   "icons": [
     {
       "src": "/static/img/icons/android-chrome-192x192.png",
